@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.12.1
 Date: ????
-  Changes:
+  Fixes:
+    - Fixed that pasting an assembler with modules would break module requests.
 ---------------------------------------------------------------------------------------------------
 Version: 2.12.0
 Date: 2025-11-29
